Add more sources of info

--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
     &copy; 2018 Michel Hua
   </div>
 
-  <script src="https://cdn.rawgit.com/mycaule/mavo-light/master/dist/0.1.5-light/mavo.js"></script>
+  <script src="https://cdn.rawgit.com/mycaule/mavo-light/master/dist/0.1.5-light/mavo.min.js"></script>
+  <!-- <script src="../mavo-light/dist/mavo.js"></script> -->
   <script src="dist/app.js"></script>
 </body>
 </html>
