Smaller build size

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <th>52 Week Range</th>
           </tr>
           <tr>
-            <td><select class="form-select" id="bases" property="base" mv-default="BTC"></select><br><select class="form-select" id="currencies" property="currency" mv-default="EUR"></select></td>
+            <td><select class="form-select select-sm" id="bases" property="base" mv-default="BTC"></select><br><select class="form-select select-sm" id="currencies" property="currency" mv-default="EUR"></select></td>
             <td><b>[spot]</b><br>[checked_date]</td>
             <td>
               <div id="graphPerf2d"></div>
@@ -188,8 +188,8 @@
       <div class="column col-3">
         <a href="#" id="toggleFeed">Show more news</a>
       </div>
-      <div class="column col-2">
-        <select class="form-select" id="feeds" property="feed"></select>
+      <div class="column col-3">
+        <select class="form-select select-sm" id="feeds" property="feed"></select>
       </div>
     </div>
   </div>
