--- a/vue/index.html
+++ b/vue/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Parcel</title>
+  <title>Watchlist</title>
 </head>
 <body>
   <div id="vueapp"></div>
+  <div id="newsfeed"></div>
 
   <script src="index.js"></script>
 </body>
