--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <meta property="spot2">
     <meta property="spot3">
     <meta property="spot4">
+    <meta property="users">
+    <meta property="users_gain1d">
     <meta property="checked_time">
     <meta property="checked_time_hourminute">
     <meta property="checked_date">
@@ -500,6 +502,14 @@
 
     <div class="container">
       <h4>Benchmark</h4>
+      <table class="table table-scroll">
+        <tr>
+          <td>Blockchain Wallets</td>
+          <td>[users] G</td>
+          <td class="text-success">+[users_gain1d] M</td>
+          <td class="text-success"><i class="icon icon-upward"></i>[users_gain1d/users/10]%</td>
+        </tr>
+      </table>
     </div>
 
     <div class="container">
