--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <br>[avg_vol30d1]
               </td>
               <td>
-                <meter class="meter" property="range52w1" min="[min52w1]" value="[spot1]" max="[max52w1]" datatype="number"></meter>
+                <meter class="meter" min="[min52w1]" value="[spot1]" max="[max52w1]" datatype="number"></meter>
                 <br>
                 <small>[min52w1]</small> - <small>[max52w1]</small>
               </td>
@@ -196,7 +196,7 @@
                 <br>[avg_vol30d2]
               </td>
               <td>
-                <meter class="meter" property="range52w2" min="[min52w2]" value="[spot2]" max="[max52w2]" datatype="number">
+                <meter class="meter" min="[min52w2]" value="[spot2]" max="[max52w2]" datatype="number">
                 </meter>
                 <br>
                 <small>[min52w2]</small> - <small>[max52w2]</small>
@@ -220,7 +220,7 @@
                 <br>[avg_vol30d3]
               </td>
               <td>
-                <meter class="meter" property="range52w3" min="[min52w3]" value="[spot3]" max="[max52w3]" datatype="number">
+                <meter class="meter" min="[min52w3]" value="[spot3]" max="[max52w3]" datatype="number">
                 </meter>
                 <br>
                 <small>[min52w3]</small> - <small>[max52w3]</small>
@@ -244,7 +244,7 @@
                 <br>[avg_vol30d4]
               </td>
               <td>
-                <meter class="meter" property="range52w4" min="[min52w4]" value="[spot4]" max="[max52w4]" datatype="number">
+                <meter class="meter" min="[min52w4]" value="[spot4]" max="[max52w4]" datatype="number">
                 </meter>
                 <br>
                 <small>[min52w4]</small> - <small>[max52w4]</small>
@@ -507,7 +507,21 @@
           <td>Blockchain Wallets</td>
           <td>[users] G</td>
           <td class="text-success">+[users_gain1d] M</td>
-          <td class="text-success"><i class="icon icon-upward"></i>[users_gain1d/users/10]%</td>
+          <td class="text-success"><i class="icon icon-upward"></i> [users_gain1d/users/10]%</td>
+        </tr>
+        <tr>
+          <td>Bitcoin</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Altcoins</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
       </table>
     </div>
