--- a/vue/index.html
+++ b/vue/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <meta charset="utf-8">
   <title>Watchlist</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="fb:app_id" content="1968068840134141">
+  <meta property="og:url" content="https://mycaule.github.io/portfolo">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Bitcoin Watchlist">
+  <meta property="og:description" content="Bitcoin Watchlist">
+  <meta property="og:image" content="https://dummyimage.com/600x400/000/fff">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
 </head>
+
 <body>
-  <div id="vueapp"></div>
-  <div id="newsfeed"></div>
+  <div class="container">
+    <div id="watchlist"></div>
+    <div id="newsfeed"></div>
+    <div id="benchmark"></div>
+  </div>
 
   <script src="index.js"></script>
 </body>
+
 </html>
