--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
                 <b>[spot1]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(gain_total1>0, 'text-success', 'text-error')]">
-                <b>[gain_total1/(total_value1-gain_total1) * 100]%</b>
-                <br>[gain_total1]
+              <td class="[iff(spot1>open1d1, 'text-success', 'text-error')]">
+                <b>[(spot1/open1d1-1)*100]%</b>
+                <br>[spot1-open1d1]
               </td>
               <td class="[iff(gain1d1>0, 'text-success', 'text-error')]">
                 <b>[gain1d1]</b>
@@ -320,9 +320,9 @@
                 <b>[spot2]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(gain_total2>0, 'text-success', 'text-error')]">
-                <b>[gain_total2/(total_value2-gain_total2) * 100]%</b>
-                <br>[gain_total2]
+              <td class="[iff(spot2>open1d2, 'text-success', 'text-error')]">
+                <b>[(spot2/open1d2-1)*100]%</b>
+                <br>[spot2-open1d2]
               </td>
               <td class="[iff(gain1d2>0, 'text-success', 'text-error')]">
                 <b>[gain1d2]</b>
@@ -354,9 +354,9 @@
                 <b>[spot3]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(gain_total3>0, 'text-success', 'text-error')]">
-                <b>[gain_total3/(total_value3-gain_total3) * 100]%</b>
-                <br>[gain_total3]
+              <td class="[iff(spot3>open1d3, 'text-success', 'text-error')]">
+                <b>[(spot3/open1d3-1)*100]%</b>
+                <br>[spot3-open1d3]
               </td>
               <td class="[iff(gain1d3>0, 'text-success', 'text-error')]">
                 <b>[gain1d3]</b>
@@ -388,9 +388,9 @@
                 <b>[spot4]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(gain_total4>0, 'text-success', 'text-error')]">
-                <b>[gain_total4/(total_value4-gain_total4) * 100]%</b>
-                <br>[gain_total4]
+              <td class="[iff(spot4>open1d4, 'text-success', 'text-error')]">
+                <b>[(spot4/open1d4-1)*100]%</b>
+                <br>[spot4-open1d4]
               </td>
               <td class="[iff(gain1d4>0, 'text-success', 'text-error')]">
                 <b>[gain1d4]</b>
