Remove vue test folder

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <td>
                 <div id="graphPerf2d1"></div>
               </td>
-              <td class="[iff(spot1>open1d1, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d1>0, 'text-success', 'text-error')]">
                 <b>[(spot1/open1d1-1)*100]%</b>
                 <br>[spot1-open1d1]
               </td>
@@ -190,7 +190,7 @@
               <td>
                 <div id="graphPerf2d2"></div>
               </td>
-              <td class="[iff(spot2>open1d2, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d2>0, 'text-success', 'text-error')]">
                 <b>[(spot2/open1d2-1)*100]%</b>
                 <br>[spot2-open1d2]
               </td>
@@ -214,7 +214,7 @@
               <td>
                 <div id="graphPerf2d3"></div>
               </td>
-              <td class="[iff(spot3>open1d3, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d3>0, 'text-success', 'text-error')]">
                 <b>[(spot3/open1d3-1)*100]%</b>
                 <br>[spot3-open1d3]
               </td>
@@ -238,7 +238,7 @@
               <td>
                 <div id="graphPerf2d4"></div>
               </td>
-              <td class="[iff(spot4>open1d4, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d4>0, 'text-success', 'text-error')]">
                 <b>[(spot4/open1d4-1)*100]%</b>
                 <br>[spot4-open1d4]
               </td>
@@ -289,7 +289,7 @@
                 <b>[spot1]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(spot1>open1d1, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d1>0, 'text-success', 'text-error')]">
                 <b>[(spot1/open1d1-1)*100]%</b>
                 <br>[spot1-open1d1]
               </td>
@@ -323,7 +323,7 @@
                 <b>[spot2]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(spot2>open1d2, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d2>0, 'text-success', 'text-error')]">
                 <b>[(spot2/open1d2-1)*100]%</b>
                 <br>[spot2-open1d2]
               </td>
@@ -357,7 +357,7 @@
                 <b>[spot3]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(spot3>open1d3, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d3>0, 'text-success', 'text-error')]">
                 <b>[(spot3/open1d3-1)*100]%</b>
                 <br>[spot3-open1d3]
               </td>
@@ -391,7 +391,7 @@
                 <b>[spot4]</b>
                 <br>[checked_time_hourminute]
               </td>
-              <td class="[iff(spot4>open1d4, 'text-success', 'text-error')]">
+              <td class="[iff(gain1d4>0, 'text-success', 'text-error')]">
                 <b>[(spot4/open1d4-1)*100]%</b>
                 <br>[spot4-open1d4]
               </td>
